@@ -1,4 +1,4 @@
-/* $Id: medmisc.c,v 1.3 2004-12-19 15:21:11 btb Exp $ */
+/* $Id: medmisc.c,v 1.4 2005-01-24 22:13:50 schaffner Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -19,7 +19,7 @@ COPYRIGHT 1993-1998 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
  */
 
 #ifdef RCS
-static char rcsid[] = "$Id: medmisc.c,v 1.3 2004-12-19 15:21:11 btb Exp $";
+static char rcsid[] = "$Id: medmisc.c,v 1.4 2005-01-24 22:13:50 schaffner Exp $";
 #endif
 
 #ifdef HAVE_CONFIG_H
@@ -312,7 +312,7 @@ if (!render_3d_in_big_window)
 		}
 
 		gr_set_current_canvas(render_canv);
-		render_frame(0);
+		render_frame(0, 0);
 
 		Assert(render_canv->cv_bitmap.bm_w == show_canv->cv_bitmap.bm_w &&
 				 render_canv->cv_bitmap.bm_h == show_canv->cv_bitmap.bm_h);
