@@ -15,6 +15,7 @@
 	* main/editor/func.c: Include strutil.h in func.c (for stricmp)
 	* main/editor/macro.c: remove unused variable "length"
 	* main/editor/med.c: don't set screen mode to SM_ORIGINAL
+	* main/editor/medmisc.c: Pass both arguments to render_frame
 
 2005-01-23  Jason Owen  <shannara256@yahoo.com>
 
